Stopped using scrollbar width in column sizing

--- a/platform/plugins/Q/web/css/columns.css
+++ b/platform/plugins/Q/web/css/columns.css
@@ -19,6 +19,7 @@
 	vertical-align: top;
 	background: #fff;
 	overflow: hidden;
+	scrollbar-width: thin;
 }
 
 .Q_mobile .Q_columns_column {
@@ -197,15 +198,15 @@ html.Q_ios.Q_standalone .Q_columns_title {
 }
 .Q_notMobile .Q_columns_stretchFirstColumn[data-column-count='2'] .Q_column_0 {
 	min-width: var(--column-width);
-	width: calc(100% - var(--column-width) - var(--column-margin) - var(--scrollbar-width));
+	width: calc(100% - var(--column-width) - var(--column-margin));
 }
 .Q_notMobile .Q_columns_stretchFirstColumn[data-column-count='3'] .Q_column_0 {
 	min-width: var(--column-width);
-	width: calc(100% - 2*(var(--column-width) + var(--column-margin) + var(--scrollbar-width)));
+	width: calc(100% - 2*(var(--column-width) + var(--column-margin)));
 }
 .Q_notMobile .Q_columns_stretchFirstColumn.Q_columns_over3 .Q_column_0 {
 	min-width: var(--column-width);
-	width: calc(100% - 2*(var(--column-width) + var(--column-margin) + var(--scrollbar-width)));
+	width: calc(100% - 2*(var(--column-width) + var(--column-margin)));
 }
 .Q_notMobile .Q_columns_stretchFirstColumn.Q_columns_animateWidth .Q_columns_column {
 	transition: width 50ms;
